snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.081412-1.module.sha512
e1aff68a21e50df625517a8876285df7d9a1fb0d42ad586967bacaa1677f9c421a646e5967acd53425afa94d8130abd738b9cc134c059db825c2c3dc22657c72